# recurstats

./: .gitignore  CMakeLists.txt  README.md
doc/: recurstats.tex
exe/: cdf_main.c  rs_test.c
include/: recurstats.h
recurstats.xcodeproj/: project.pbxproj
recurstats.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
recurstats.xcodeproj/xcshareddata/xcschemes/: cdf_main.xcscheme  recurstats.xcscheme  rs_test.xcscheme
recurstats.xcodeproj/xcuserdata/p4010.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: rs_cdf_t.c  rs_cdf_t.h  rs_recurstats.c
